[package]
name = "vesania"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.29.0"
lodepng = "3.10.7"
rayon = "1.10.0"
rgb = { git = "https://github.com/kornelski/rust-rgb", features = ["num-traits"] }
